# bullrs

./: .gitignore  AGENTS.md  Cargo.toml  PATTERNS.md  README.md  REFERENCE.md
docker/: .env  redis.yaml
examples/: add_job.rs  complex.rs  process.rs  simple.rs
nodejs/: README.md  add_job.js  package-lock.json  package.json  process.js  simple.js
src/: job.rs  lib.rs  queue.rs
src/commands/: mod.rs
