[package]
name = "bullrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# crate-type = ["cdylib"]

[dependencies]
fred = "6.0.0"
tokio = { version = "1.26.0", features = ["full"] }
chrono = { version = "0.4" }
uuid = { version = "1.3.0", features = ["v7", "fast-rng", "macro-diagnostics"] }
md-5 = { version = "0.10" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[dev-dependencies]
uuid = { version = "1.3.0", features = ["v4", "v7"] }
